hooked up the messages with the terrible, terrible command parsing code, god.

--- a/meta/config.yml
+++ b/meta/config.yml
@@ -1,10 +1,8 @@
 network: irc.freenode.net
 port: 6667
-channel: lolmanboi
+channel: kit-bot
 nick: pie-man
 user: k
 quit: nub
-# if true, appends sanitized chat from the channel into random.txt
-#log_in_markov: true
 
 
